# notion-task-tracker

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  requirement.md
.github/workflows/: build.yml
script/: generate-msvc-build-script.sh
scripts/: install.ps1  install.sh
src/: config.cpp  config.hpp  id_gen.cpp  id_gen.hpp  main.cpp  notion_client.cpp  notion_client.hpp  page_util.hpp  schema.hpp  util.cpp  util.hpp
src/commands/: check.cpp  command_support.hpp  commands.hpp  create.cpp  finish.cpp  guide.cpp  init.cpp  resume.cpp  search.cpp  setup.cpp  start.cpp
